--- a/5강/03 자료.md
+++ b/5강/03 자료.md
@@ -384,7 +384,8 @@ print(predicted_shoe_size)
 - 프로젝트 설정
 ```python
 import tensorflow as tf
-from tensorflow.keras import layers
+#from tensorflow.keras import layers
+from keras import layers
 
 # keras 텐서플로우에 포함된 고수준 API로, 딥러닝 모델을 쉽게 만들 수 있음
 tf.keras.Sequential([
@@ -540,6 +541,47 @@ print(predictions)
     - 모델 학습 과정에서 사용자가 설정해야 하는 매개변수. 예를 들어, 학습률, 에포크 수, 레이어 수 등.
 
 #### 결론
+- 최종
+```python
+import tensorflow as tf
+from keras import layers
+import pandas as pd
+import numpy as np
+
+data = pd.read_csv('ai/gpascore.csv')
+print(data)
+
+print(data.isnull().sum())
+
+data = data.dropna()
+
+y = data['admit'].values
+print(y)
+
+x = []
+
+for i, rows in data.iterrows():
+  print(rows)
+  print(rows['gre'])
+  print(rows['gpa'])
+  print(rows['rank'])
+  x.append( [rows['gre'], rows['gpa'], rows['rank'] ] ) # [640, 3.19, 4]
+
+print(x)
+
+model = tf.keras.Sequential([
+    layers.Dense(64, activation='relu'),
+    layers.Dense(128, activation='relu'),
+    layers.Dense(1, activation='sigmoid')
+])
+model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])
+model.fit(np.array(x), np.array(y), epochs=100)
+
+new_data = np.array([[750, 3.7, 3], [400, 2.1, 1]])
+predictions = model.predict(new_data)
+print(predictions)
+```
+
 딥러닝 AI를 만들기 위해 해야할 일 
 1. 모델 만들기
 2. 데이터 준비하기
